--- a/css/theme.css
+++ b/css/theme.css
@@ -1,13 +1,16 @@
 :root {
-  --color-primary: goldenrod;
-  --color-primary-light: gold;
-  --color-secondary: lightcoral;
-  --color-accent: greenyellow;
-  --color-neutral-beige: #e2e2e2;
-  --color-whatever: peachpuff;
+  --color-primary: #afbabc;
+  --color-secondary: #e6e5de;
+  --color-black: black;
+  --color-white: white;
+  --color-charcoal: #484442 ;
+  --color-rust: #6c2506;
+  --color-tan: #9d8e82;
+  --color-tan-light: #e6e5de;
+  --color-dark-teal: #01343e;
 
-  --font-primary: "Alegreya Sans", "Trebuchet MS", Arial, sans-serif;
-  --font-secondary: "Source Code Pro", Menlo, Consolas, Monospace;
+  --font-primary: "Montserrat", sans-serif;
+  --font-secondary: "Playfair Display", serif;
 }
 
 html {
