Remove extra quotation mark

--- a/css/theme.css
+++ b/css/theme.css
@@ -6,7 +6,7 @@
   --color-charcoal: #484442 ;
   --color-rust: #6c2506;
   --color-tan: #9d8e82;
-  --color-tan-light: #e6e5de;
+  --color-soft-blue: ;
   --color-dark-teal: #01343e;
 
   --font-primary: "Montserrat", sans-serif;
