--- a/css/theme.css
+++ b/css/theme.css
@@ -1,7 +1,7 @@
 :root {
   --color-primary: #afbabc;
   --color-secondary: #9d8e82;
-  --color-pale-blue: #e6e5de;
+  --color-pale-blue: #f4f6f7;
   --color-black: black;
   --color-white: white;
   --color-charcoal: #484442 ;
