--- a/css/theme.css
+++ b/css/theme.css
@@ -1,12 +1,12 @@
 :root {
   --color-primary: #afbabc;
-  --color-secondary: #9d8e82;
-  --color-pale-blue: #f4f6f7;
+  --color-primary-dark: #01343e;
+  --color-primary-light: #f4f6f7;
+  --color-secondary: #6c2506;
+  --color-secondary-light: #9d8e82;
+  --color-charcoal: #484442;
   --color-black: black;
   --color-white: white;
-  --color-charcoal: #484442 ;
-  --color-rust: #6c2506;
-  --color-dark-teal: #01343e;
 
   --font-primary: "Montserrat", sans-serif;
   --font-secondary: "Playfair Display", serif;
