Create card and style

--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -1,5 +1,5 @@
 .btn {
-  border: solid 2px;
+  border: solid 3px;
   border-radius: 13px;
   font-weight: 500;
   padding: .5em 1em;
@@ -14,20 +14,22 @@
 }
 
 .btn-teal:hover {
-  background-color: var(--color-primary-light);
-  border-color: var(--color-primary-light);
+  background-color: var(--color-primary);
+  border-color: var(--color-primary-dark);
   color: var(--color-primary-dark)
 }
 
 /** Shop **/
 .btn-ghost {
+  border: solid 2px;
   background-color: transparent;
   border-color: var(--color-primary-light);
   color: var(--color-primary-light);
 }
 
 .btn-ghost:hover {
-  background-color: rgba(174, 186, 188, 0.75);
+  border: solid 2px;
+  background-color: rgba(174, 186, 188, 0.5);
   border-color: var(--color-primary-light);
   color: var(--color-primary-light);
 }
@@ -48,6 +50,7 @@
 /** Checkout **/
 .btn-blue {
   background-color: var(--color-primary);
+  border-color: var(--color-primary);
   color: var(--color-primary-dark);
 }
 
