--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -23,9 +23,8 @@ a {
   color: var(--color-secondary);
 }
 
-.push-three-quarters,
-.push-3-4 {
-  margin-bottom: .975rem;
+.push {
+  margin-bottom: 1.3rem;
 }
 
 .push-quarter,
