Create banner pattern

--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -56,3 +56,17 @@ a {
 }
 
 /** Banners **/
+.banner {
+  position: relative;
+  background:
+  linear-gradient(to top, rgba(11, 35, 40, 0.6),rgba(11, 35, 40, 0.6)) no-repeat center bottom,
+  url("../images/banner.jpg") no-repeat center left / cover;
+  padding-top: 60%;
+}
+
+.banner-content {
+  position: absolute;
+  width: 100%;
+  bottom: 30%;
+  left: 5%;
+  color: var(--color-primary-light);
