Update form errors

--- a/_patterns/form/forms.css
+++ b/_patterns/form/forms.css
@@ -25,29 +25,26 @@ input {
   height: 2.5em;
 }
 
-.is-validated input:invalid,
-.is-validated input[type="checkbox"]:invalid + label::before,
-.is-validated:invalid,
-.is-validated[type="checkbox"] {
-  border-color: #f33;
-  boder-radius: 10px;
+.error-bg {
+  background-color: rgba(108, 37, 6, 0.15);
+  display: none;
+  border-radius: 10px;
 }
 
 .error-message {
   display: none;
-  background-color: rgba(174, 186, 188, 0.5);
   color: var(--color-secondary);
-}
-
-.error-message-highlighted {
-  background-color: var(--color-secondary);
-  color: #fff;
+  font-weight: 500;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .is-validated > .error-message:first-child,
 .is-validated input:invalid + .error-message,
 .is-validated input:invalid + label + .error-message,
 .is-validated:invalid + .error-message,
-.is-validated:invalid + label + .error-message {
+.is-validated:invalid + label + .error-message, .error-bg {
   display: block;
 }
