--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -56,6 +56,10 @@ a {
   color: var(--color-primary-dark);
 }
 
+.image-card .colour-3 {
+  color: var(--color-secondary-dark);
+}
+
 .image-card img {
   position: relative;
   z-index: 1000;
@@ -65,7 +69,6 @@ a {
   height: 10em;
   border-radius: 40px;
   box-shadow: -10px 10px 30px 0px rgba(0,0,0,0.35);
-  margin-right: 1em;
 }
 
 /** Product **/
