--- a/_layouts/check-out.html
+++ b/_layouts/check-out.html
@@ -2,15 +2,13 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>ǦoneWick</title>
+  <title>Checkout</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="/css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karma:400,600|Oswald:400,700" rel="stylesheet">
 </head>
 <body>
-
   {% pattern header/header %}
   {{content}}
-  {% pattern footer/footer %}
 </body>
 </html>
