--- a/_patterns/footer/footer.css
+++ b/_patterns/footer/footer.css
@@ -1,5 +1,6 @@
 footer {
   background-color: var(--color-secondary-dark);
+  width: 100%;
 }
 
 .terms, .socials a {
@@ -9,18 +10,4 @@ footer {
 
 .terms:hover {
   font-weight: 600;
-}
-
-i {
-  max-width: 50px;
-}
-
-.icon-label {
-  font-family: var(--font-secondary);
-  color: var(--color-primary-light);
-}
-
-.copyright {
-  font-family: var(--font-primary);
-  font-weight: normal;
 }
