Add a form submission button, and fix the footer styles
The form CSS has been adjusted so it (mostly) works; the page loads with the form errors showing, but they disappear as the user adds content into them.

Let me know if there's anything else I can do to help :)

--- a/_patterns/forms/forms.css
+++ b/_patterns/forms/forms.css
@@ -33,7 +33,6 @@ input {
 
 .error-bg {
   background-color: rgba(108, 37, 6, 0.15);
-  display: none;
   border-radius: 10px;
 }
 
@@ -47,15 +46,19 @@ input {
   border-bottom-right-radius: 10px;
 }
 
+.error-message:first-child,
+input:invalid + .error-message,
+input:invalid + label + .error-message {
+  display: block;
+}
+
 .is-validated > .error-message:first-child,
 .is-validated input:invalid + .error-message,
 .is-validated input:invalid + label + .error-message,
 .is-validated:invalid + .error-message,
-.is-validated:invalid + label + .error-message, .error-bg {
+.is-validated:invalid + label + .error-message {
   display: block;
 }
-
-/** Sign up **/
 
 .sign-up {
   color: var(--color-primary-dark);
