--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,7 @@
   {% pattern header/header %}
   {{content}}
   {% pattern footer/footer %}
+
+  <script src="/js/main.js"></script>
 </body>
 </html>
